# Swarmscope

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  generate_scenario.py  requirements.txt  simulate.py  train_model.py
sandbox/: __init__.py  agents.py  api.py  config.py  prompts.py  schemas.py  simulation.py  utils.py
sandbox/analytics/: __init__.py  ab_testing.py  batch_runner.py  comparator.py  complexity_analyzer.py  counterfactual_replay.py  exporter.py  report_generator.py  sentiment_tracker.py  token_tracker.py
sandbox/backends/: __init__.py  anthropic_backend.py  base.py  dummy.py  ollama_backend.py  openai_backend.py
sandbox/dashboard/: app.py  index.html
sandbox/detectors/: __init__.py  base.py  collusion.py  deadlock.py  escalation.py  goal_drift.py  information_leakage.py  jailbreak.py  loop.py
sandbox/notifications/: __init__.py  webhook.py
sandbox/predictive_model/: __init__.py  failure_predictor.pkl  markov_model.py  predictor.py  train.py
sandbox/storage/: __init__.py  base.py  (+1 more)
scenarios/: crisis_response.yaml  debate_consensus.yaml  hiring_panel.yaml  negotiation.yaml  resource_allocation.yaml  supply_chain.yaml
sdk/rust/: Cargo.toml
sdk/rust/src/: lib.rs
tests/: test_agents.py  test_analytics.py  test_api.py  test_comparator.py  test_complexity_analyzer.py  test_detectors.py  test_escalation_detector.py  test_exporter.py  test_information_leakage.py  test_predictive_model.py  test_python_sdk.py  test_sentiment_tracker.py  test_simulation.py  test_storage.py  test_token_tracker.py  test_webhook.py
(+7 files in other folders)
