[package]
name = "swarmscope-sdk"
version = "1.0.0"
edition = "2021"
description = "Rust client library for SwarmScope agent safety server"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
